package epnoi app as web server with docker containers