@@ -12,5 +12,169 @@
 	<name>epnoi app</name>
 	<description>epnoi app</description>
 
+
+	<properties>
+		<app.name>modules</app.name>
+		<assemble.directory>target/generated-resources/appassembler/jsw/${app.name}</assemble.directory>
+	</properties>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>${maven.appassembler.plugin.version}</version>
+				<executions>
+					<execution>
+						<id>generate-jsw-scripts</id>
+						<phase>package</phase>
+						<goals>
+							<goal>generate-daemons</goal>
+						</goals>
+						<configuration>
+							<configurationDirectory>config</configurationDirectory>
+							<copyConfigurationDirectory>true</copyConfigurationDirectory>
+							<!--<assembleDirectory>${assemble.directory}</assembleDirectory>-->
+							<repositoryName>lib</repositoryName>
+							<repositoryLayout>flat</repositoryLayout>
+							<!--<preWrapperConf>src/main/resources/pre-wrapper.conf</preWrapperConf>-->
+							<daemons>
+								<daemon>
+									<id>${app.name}</id>
+									<wrapperMainClass>org.tanukisoftware.wrapper.WrapperSimpleApp</wrapperMainClass>
+									<mainClass>org.epnoi.app.TomcatLauncher</mainClass>
+									<platforms>
+										<platform>jsw</platform>
+									</platforms>
+									<jvmSettings>
+										<initialMemorySize>1024M</initialMemorySize>
+										<maxMemorySize>1024M</maxMemorySize>
+										<maxStackSize>512K</maxStackSize>
+										<systemProperties>
+											<systemProperty>app.name=${app.name}</systemProperty>
+											<systemProperty>user.timezone=Etc/GMT</systemProperty>
+											<systemProperty>sun.jnu.encoding=UTF-8</systemProperty>
+											<systemProperty>file.encoding=UTF-8</systemProperty>
+											<systemProperty>user.country=US</systemProperty>
+											<systemProperty>user.language=en</systemProperty>
+											<systemProperty>javax.xml.accessExternalDTD=all</systemProperty>
+										</systemProperties>
+										<extraArguments>
+											<extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
+											<extraArgument>-XX:+CMSClassUnloadingEnabled</extraArgument>
+											<!--<extraArgument>-XX:MaxPermSize=128M</extraArgument>-->
+											<extraArgument>-server</extraArgument>
+										</extraArguments>
+									</jvmSettings>
+									<generatorConfigurations>
+										<generatorConfiguration>
+											<generator>jsw</generator>
+											<includes>
+												<include>linux-x86-32</include>
+												<include>linux-x86-64</include>
+												<include>macosx-universal-64</include>
+												<include>macosx-universal-32</include>
+											</includes>
+											<configuration>
+												<property>
+													<name>configuration.directory.in.classpath.first</name>
+													<value>config</value>
+												</property>
+												<property>
+													<name>wrapper.logfile</name>
+													<value>logs/wrapper.log.YYYYMMDD</value>
+												</property>
+												<property>
+													<name>wrapper.logfile.rollmode</name>
+													<value>DATE</value>
+												</property>
+												<property>
+													<name>wrapper.java.command</name>
+													<value>%JAVA_HOME%/bin/java</value>
+												</property>
+												<property>
+													<name>wrapper.logfile.maxsize</name>
+													<value>100m</value>
+												</property>
+												<property>
+													<name>wrapper.logfile.maxfiles</name>
+													<value>30</value>
+												</property>
+											</configuration>
+										</generatorConfiguration>
+									</generatorConfigurations>
+								</daemon>
+							</daemons>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>${maven.assembly.plugin.version}</version>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>attached</goal>
+						</goals>
+						<configuration>
+							<tarLongFileMode>gnu</tarLongFileMode>
+							<descriptors>
+								<descriptor>src/main/assembly/descriptor.xml</descriptor>
+							</descriptors>
+							<appendAssemblyId>false</appendAssemblyId>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
+
+	<dependencies>
+
+		<!-- Internal Dependencies -->
+		<dependency>
+			<groupId>org.epnoi</groupId>
+			<artifactId>epnoi-vms</artifactId>
+			<version>${project.version}</version>
+			<classifier>docker</classifier>
+			<type>zip</type>
+		</dependency>
+		<dependency>
+			<groupId>org.epnoi</groupId>
+			<artifactId>epnoi-hoarder</artifactId>
+			<version>${project.version}</version>
+			<type>war</type>
+		</dependency>
+
+
+		<!-- Apache Tomcat -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-catalina</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-util</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+		</dependency>
+
+	</dependencies>
+
 </project>
 
